Add websocket support with live update capability.

--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "chart.js": "^2.6.0",
     "check-types": "^7.3.0",
+    "classnames": "^2.2.5",
     "config": "^1.26.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "faye": "^1.2.4",
+    "faye-redis": "^0.2.0",
     "jquery": "^3.2.1",
     "knex": "^0.13.0",
     "morgan": "^1.8.2",
