--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "morgan": "^1.8.2",
     "mysql": "^2.14.1",
     "prop-types": "^15.5.10",
+    "randomcolor": "^0.5.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
+    "react-chartjs-2": "^2.5.6",
     "react-dom": "^15.6.1",
     "redis": "^2.8.0",
     "url-join": "^2.0.2"
